--- a/Sample/Web.config
+++ b/Sample/Web.config
@@ -4,6 +4,17 @@
   https://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+	<connectionStrings>
+		<add
+			name="myDB"
+			connectionString="Data Source=70.32.28.3;
+			Initial Catalog=testaccount_test;
+			Persist Security Info=True;
+			User ID=testaccount;
+			Password=Taccount1"
+			providerName="System.Data.SqlClient"
+			/>
+	</connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.1"/>
     <httpRuntime targetFramework="4.7.1"/>
