--- a/Sample/Web.config
+++ b/Sample/Web.config
@@ -16,6 +16,7 @@
 			/>
 	</connectionStrings>
   <system.web>
+	  <customErrors mode="Off"/>
     <compilation debug="true" targetFramework="4.7.1"/>
     <httpRuntime targetFramework="4.7.1"/>
     <pages>
